--- a/index.html
+++ b/index.html
@@ -76,32 +76,33 @@
       <section class="card" id="about">
         <h2>about</h2>
         <p>
-          hey, i'm kaison. i study international business, marketing, and
-          entrepreneurship.
+          hey, i'm kai. i'm a business student at usc and i really like music.
         </p>
         <p class="details">
-          i spend a lot of time coding, making music, and chasing new ideas. if
-          i'm not at the gym or gaming, i'm probably listening to a playlist and
-          tinkering with something.
+          i'm a freshman by year, junior by credits at the darla moore school of business in columbia, sc. i'm a barista and make an iced pour over every morning, followed by 2-3 later in the day. i make music and try my best to listen to all genres, finding something i can enjoy in each one.
         </p>
       </section>
 
       <section class="grid">
         <div class="card" id="work">
-          <h2>work history</h2>
+          <h2>work</h2>
           <ul>
             <li>front service clerk — publix</li>
-            <li>barista — knowledge perk coffee company</li>
+            <li>barista — knowledge perk coffee</li>
+            <li>coffee contractor — suave coffee</li>
+            <li>mobile barista — brew la la coffee</li>
             <li>caterer — waiter’s choice catering</li>
+            <li>barista — knowledge perk columbia</li>
           </ul>
           <p class="details">
-            i like fast-paced environments and learning how teams move together.
+            in case you can't tell, i really like working in coffee.
           </p>
         </div>
 
         <div class="card" id="interests">
           <h2>interests</h2>
           <ul>
+            <li>making/drinking coffee</li>
             <li>programming</li>
             <li>music production</li>
             <li>gaming</li>
